fixed spacing

--- a/final/css/small.css
+++ b/final/css/small.css
@@ -201,7 +201,7 @@
 
     .stay div input {
         margin-left: -2rem;
-        margin-right: -2rem;
+        margin-right: -4rem;
     }
 
     
